--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ email: bmzhou[at]m[dot]fudan[dot]edu[dot]cn
 description: My name is Biming Zhou (周铋洺). I am a second-year Ph.D. student at the Fudan University, Shanghai. My supervisor is Yunlei Zhao.
 My research interests are mainly in post-quantum cryptography, lattice based cryptography. 
 
-#canonical: https://minimal-light-theme.yliu.me/
+canonical: https://minimal-light-theme.yliu.me/
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
